@@ -16,7 +16,7 @@ plugins {
   id 'application'
   id 'checkstyle'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.1.6'
+  id 'io.spring.dependency-management' version '1.1.7'
   id 'org.springframework.boot' version '3.3.5'
   id 'com.github.ben-manes.versions' version '0.51.0'
   id 'org.sonarqube' version '6.2.0.5505'
@@ -24,6 +24,7 @@ plugins {
   id 'idea'
   id 'info.solidsoft.pitest' version '1.15.0'
   id 'com.github.hmcts.rse-cft-lib' version '0.19.1705'
+//  id 'uk.gov.hmcts.java' version '0.12.67'
 }
 
 apply plugin: 'org.springframework.boot'
@@ -36,6 +37,16 @@ version = '1.0.0'
 
 def mirrorHost = System.env.NONPROD_SUBSCRIPTION_NAME == "sandbox" ? "artifactory.sandbox" : "artifactory"
 def mirrorUrl = "https://${mirrorHost}.platform.hmcts.net/artifactory/maven-remotes"
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
+}
+
+application {
+  mainClass.set('uk.gov.hmcts.reform.fpl.Application')
+}
 
 sourceSets {
   functionalTest {
@@ -73,8 +84,8 @@ sourceSets {
 
 idea {
   module {
-    testSourceDirs += file('src/integrationTest/java')
-    testSourceDirs += file('src/functionalTest/java')
+    testSources.from file('src/integrationTest/java')
+    testSources.from file('src/functionalTest/java')
   }
 }
 
@@ -91,7 +102,7 @@ configurations.integrationTestImplementation {
   exclude group: 'org.springframework.cloud', module: 'spring-cloud-starter-netflix-hystrix'
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
 
@@ -104,7 +115,9 @@ tasks.withType(JavaCompile) {
   }
 }*/
 
-task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
+tasks.register('integration', Test) {
+  description = 'Runs the integration tests.'
+  group = 'Verification'
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
   classpath = sourceSets.integrationTest.runtimeClasspath
   // set your environment variables here
@@ -112,23 +125,23 @@ task integration(type: Test, description: 'Runs the integration tests.', group: 
 }
 check.dependsOn integration
 
-task lintUserInterfaceTests(type: Exec, description: 'Runs linting of E2E tests.') {
+tasks.register('lintUserInterfaceTests', Exec) {
+  description = 'Runs linting of E2E tests.'
   commandLine '/usr/bin/yarn', 'lint'
 }
 
-task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
+tasks.register('runSmokeTests', Exec) {
+  description = 'Runs smoke tests.'
   commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
 }
 
-task runApiTests(type: Exec, description: 'Runs api tests.', group: 'Verification') {
+tasks.register('runApiTests', Exec) {
+  description = 'Runs api tests.'
+  group = 'Verification'
   onlyIf {
     return System.env.SKIP_API_TESTS == null || System.env.SKIP_API_TESTS == 'false'
   }
   commandLine '/usr/bin/yarn', 'test:api-test'
-//  testLogging.showStandardStreams = true
-//  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-//  classpath = sourceSets.functionalTest.runtimeClasspath
-//  finalizedBy aggregate
 }
 
 project.ext {
@@ -136,7 +149,9 @@ project.ext {
   pacticipantVersion = System.env.GIT_COMMIT != null ? System.env.GIT_COMMIT.substring(0,9) : ''
 }
 
-task runContractTests(type: Test, description: 'Runs contract tests.', group: 'Verification') {
+tasks.register('runContractTests', Test) {
+  description = 'Runs contract tests.'
+  group = 'Verification'
   onlyIf {
     return System.env.SKIP_CONTRACT_TESTS == null || System.env.SKIP_CONTRACT_TESTS == 'false'
   }
@@ -148,7 +163,9 @@ task runContractTests(type: Test, description: 'Runs contract tests.', group: 'V
 }
 
 
-task runAndPublishConsumerPactTests(type: Test, description: 'Publish pact test to broker.', group: 'Verification') {
+tasks.register('runAndPublishConsumerPactTests', Test) {
+  description = 'Publish pact test to broker.'
+  group = 'Verification'
   logger.lifecycle("Runs pact consumer Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
@@ -177,7 +194,9 @@ def static inStrictOrder(Task... tasks) {
   return tasks
 }
 
-task smoke(type: Test, description: 'Runs smoke test.', group: 'Verification') {
+tasks.register('smoke', Test) {
+  description = 'Runs smoke test.'
+  group = 'Verification'
   testLogging.showStandardStreams = true
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
@@ -185,15 +204,19 @@ task smoke(type: Test, description: 'Runs smoke test.', group: 'Verification') {
   finalizedBy aggregate
 }
 
-task runCodeceptSmokeTest(type: Test, description: 'Runs the old codecept smoke test.', group: 'Verification') {
+tasks.register('runCodeceptSmokeTest', Test) {
+  description = 'Runs the old codecept smoke test.'
+  group = 'Verification'
   dependsOn(inStrictOrder(runSmokeTests))
 }
 
-task functional(type:Test,description: 'Runs the functional tests.') {
+tasks.register('functional', Test) {
+  description = 'Runs the functional tests.'
   dependsOn(inStrictOrder(runApiTests))
 }
 
-task contract(description: 'Runs the contract tests.') {
+tasks.register('contract') {
+  description = 'Runs the contract tests.'
   dependsOn(inStrictOrder(runContractTests))
 }
 
@@ -418,8 +441,6 @@ dependencies {
   contractTestImplementation group: 'com.google.guava', name: 'guava', version: '33.3.1-jre'
 }
 
-mainClassName = 'uk.gov.hmcts.reform.fpl.Application'
-
 bootJar {
   archiveFileName = 'service.jar'
 
@@ -431,11 +452,13 @@ bootJar {
 test {
   maxHeapSize = "1024m"
   useJUnitPlatform()
+  jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
 
 integration {
   maxHeapSize = "1024m"
   useJUnitPlatform()
+  jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
 
 pitest {
